crates/meilisearch/tests/index/snapshots/integration__index__fields__fields_after_uploading_recipe_and_settings.snap
---
source: crates/meilisearch/tests/index/fields.rs
expression: "(code.as_u16(), &task)"
---
[
  202,
  {
    "taskUid": "[uid]",
    "indexUid": "[uid]",
    "status": "enqueued",
    "type": "indexCreation",
    "enqueuedAt": "[date]"
  }
]
