crates/meilisearch/tests/index/snapshots/integration__index__fields__get_fields_with_documents_and_filters-2.snap
---
source: crates/meilisearch/tests/index/fields.rs
expression: "(code.as_u16(), response)"
---
[
  200,
  [
    {
      "name": "color",
      "displayed": {
        "enabled": true
      },
      "searchable": {
        "enabled": true
      },
      "sortable": {
        "enabled": false
      },
      "distinct": {
        "enabled": false
      },
      "rankingRule": {
        "enabled": false
      },
      "filterable": {
        "enabled": false,
        "sortBy": "alpha",
        "facetSearch": false,
        "equality": false,
        "comparison": false
      },
      "localized": {
        "locales": []
      }
    },
    {
      "name": "genre",
      "displayed": {
        "enabled": true
      },
      "searchable": {
        "enabled": true
      },
      "sortable": {
        "enabled": false
      },
      "distinct": {
        "enabled": false
      },
      "rankingRule": {
        "enabled": false
      },
      "filterable": {
        "enabled": false,
        "sortBy": "alpha",
        "facetSearch": false,
        "equality": false,
        "comparison": false
      },
      "localized": {
        "locales": []
      }
    },
    {
      "name": "id",
      "displayed": {
        "enabled": true
      },
      "searchable": {
        "enabled": true
      },
      "sortable": {
        "enabled": false
      },
      "distinct": {
        "enabled": false
      },
      "rankingRule": {
        "enabled": false
      },
      "filterable": {
        "enabled": false,
        "sortBy": "alpha",
        "facetSearch": false,
        "equality": false,
        "comparison": false
      },
      "localized": {
        "locales": []
      }
    },
    {
      "name": "title",
      "displayed": {
        "enabled": true
      },
      "searchable": {
        "enabled": true
      },
      "sortable": {
        "enabled": false
      },
      "distinct": {
        "enabled": false
      },
      "rankingRule": {
        "enabled": false
      },
      "filterable": {
        "enabled": false,
        "sortBy": "alpha",
        "facetSearch": false,
        "equality": false,
        "comparison": false
      },
      "localized": {
        "locales": []
      }
    }
  ]
]
